1.19.1
- Improved Human NPC behaviors:
	- NPCs now "look ahead" when walking and avoid falling into holes
	- NPCs run away from running water
- Added explosive furniture NPCs (TNT crate, hydrogen & sodium tanks, diesel can)
	- ...adding a whole new dimension to the game!
	- Fine-tuned general explosion physics in the process
- The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
- NPCs on a ship are now lit by the ship's lamps
- Bug fixes:
	- Fixed a crash when using the repair tool on a part of the ship that had exploded (thanks to AlexGuy!)
	- Fixed a crash happening after adding and removing many NPCs multiple times
- ...and a few more small improvements here and there!

1.19.0
- Initial implementation of NPCs!
	- This release contains the foundation of the new NPC sub-system of the simulator
		- Additional functionality will come out with future releases
- Added new "Lamp" tool, allowing you to peer at wrecks into the darkness
	- Revisited darkness of wrecks in the process: ships now fade into darkness as they sink deeper and deeper
		- This new behavior may be controlled via "Settings"->"Rendering"->"Ship"->"Depth Darkening"
- Rendering improvements:
	- Improved flames
		- Each release brings flames closer to the way I've always wanted them to look...
	- Improved clouds
	- Marginal rendering performance improvements
- Revisited ocean floor friction and silting
	- ...mostly spurred from a lot of development in this area due to NPC work
- Added "shift lock mode": use middle mouse button to toggle SHIFT on or off, for easier exercising of advanced tool behaviors
	- Thanks to Damien for the idea!
- Added "Guide Mode" to Terrain Adjust tool: keep SHIFT pressed and you'll be able to draw terrain along straight lines
- Added new "Tungsten" material - the heaviest in Floating Sandbox's library!
- Added 28 new ships
- Bug fixes:
	- Fixed a ShipBuilder bug that was messing up copy-and-paste of electrical elements