@@ -1,10 +1,14 @@
 1.19.1
+- Added thermodynamics to NPC simulation
+	- With proper heat dissipation and transfer between NPCs and ship/ambient
 - Improved Human NPC behaviors:
 	- NPCs now "look ahead" when walking and avoid falling into holes
 	- NPCs run away from running water
 - Added explosive furniture NPCs (TNT crate, hydrogen & sodium tanks, diesel can)
 	- ...adding a whole new dimension to the game!
 	- Fine-tuned general explosion physics in the process
+- More tools interacting with NPCs
+	- HeatBlaster, laser cannon, fire extinguisher
 - The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
 - NPCs on a ship are now lit by the ship's lamps
 - Bug fixes:
